# qnahub

./: admin.html  dashboard.html  forms.py  login.html  main.py  models.py  pyproject.toml  registration.html  run.py
instance/: site.db
qnahub/: __init__.py  forms.py  models.py  routes.py
qnahub/answers/: views.py
qnahub/main/: views.py
qnahub/questions/: forms.py  views.py
qnahub/static/js/: auth_tail.js  main.js  sidebar.js
qnahub/static/style/: profile.css
qnahub/templates/: account.html  all_users.html  base.html  index.html  login.html  login_register_base.html  new_question.html  profile.html  profilez.html  question.html  register.html  settings.html  subjects.html  users.html
qnahub/users/: forms.py  utils.py  views.py
static/js/: passwordtoggle.js  register.js  sidebar.js
static/style/: login.css  register.css
templates/: admin.html  base.html  dashboard.html  index.html  login.html  question.html  register.html  unanswered.html
